# figures

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: coverage.yml  rust.yml
coverage/: coverage.json  index.html
coverage/figures/src/: displayable.rs.html  figure.rs.html  index.html  lib.rs.html  num.rs.html  point.rs.html  rect.rs.html  scale.rs.html  size.rs.html  vector.rs.html  vectorlike.rs.html
figures/: Cargo.toml
figures/src/: angle.rs  approxeq.rs  displayable.rs  figure.rs  lib.rs  num.rs  point.rs  rect.rs  scale.rs  size.rs  vector.rs  vectorlike.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
main/figures/: all.html  enum.Angle.html  enum.FloatOrInt.html  enum.Pixels.html  enum.Points.html  enum.Rect.html  enum.Scaled.html  index.html  macro.fraction!.html  macro.fraction.html  sidebar-items.js  struct.Angle.html  struct.DisplayScale.html  struct.ExtentsRect.html  struct.Figure.html  struct.Fraction.html  struct.Pixels.html  struct.Point.html  struct.Points.html  struct.Rect.html  struct.Scale.html  struct.Scaled.html  struct.Size.html  struct.SizedRect.html  struct.Vector.html  trait.Abs.html  trait.Approx.html  trait.Ceil.html  trait.Displayable.html  trait.FloatConversion.html  trait.Floor.html  trait.FromComponents.html  trait.IntoComponents.html  trait.IntoSigned.html  trait.IntoUnsigned.html  trait.Lp2D.html  trait.One.html  trait.PixelScaling.html  trait.Pow.html  trait.Px2D.html  (+14 more)
main/figures/angle/: enum.Angle.html  struct.Angle.html
main/figures/approxeq/: trait.Approx.html
main/figures/displayable/: enum.Pixels.html  enum.Points.html  enum.Scaled.html  struct.DisplayScale.html  struct.Pixels.html  struct.Points.html  struct.Scaled.html  trait.ToPixels.html  (+3 more)
main/xtask/: all.html  enum.Args.html  fn.main.html  index.html  sidebar-items.js  struct.CodeCoverageConfig.html
src/: angle.rs  fraction.rs  lib.rs  pod.rs  point.rs  primes.rs  ratio.rs  rect.rs  size.rs  tables.rs  tests.rs  traits.rs  twod.rs  units.rs  utils.rs
src/docs/: dips.md  lp.md  px.md  upx.md
xtask/src/: main.rs
(+145 files in other folders)
