[package]
name = "figures"
version = "0.1.0"
edition = "2021"
description = "A math library specialized for 2d screen graphics."
repository = "https://github.com/khonsulabs/figures"
license = "MIT OR Apache-2.0"
keywords = ["2d", "math", "graphics"]
categories = ["mathematics"]
readme = "../README.md"

[features]
# This only exists because we need a paltform selected when running unit tests
# with the winit feature enabled. This library doesn't need any specific
# platforms to be enabled, nor doesn't it activate any additional functionality
# when enabling this feature flag.
x11 = ["winit/x11"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"], optional = true }
wgpu = { version = "0.18.0", default-features = false, optional = true }
winit = { version = "0.29.1-beta", default-features = false, optional = true }
euclid = { version = "0.22.9", default-features = false, optional = true }
intentional = "0.1.0"
serde = { version = "1.0.193", optional = true, features = ["derive"] }
