[package]
name = "figures"
version = "0.1.0"
edition = "2018"
description = "A math library specialized for 2d screen graphics."
repository = "https://github.com/khonsulabs/figures"
license = "MIT OR Apache-2.0"
keywords = ["2d", "math", "graphics"]
categories = ["mathematics"]
readme = "../README.md"

[features]
default = []

[dependencies]
approx = "0.5"
num-traits = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
